# audio

./: .gitignore  CMakeLists.txt  Makefile  README.md  get_deps.sh  meson.build
examples/echo/: CMakeLists.txt  main.cpp
include/: audio.hpp
lib/: CMakeLists.txt
src/: player.cpp  recorder.cpp
